back visiblity firefox bug squashed

--- a/src/index.css
+++ b/src/index.css
@@ -226,6 +226,7 @@ a {
   width: 100%;
   transition: transform 500ms;
   transform-style: preserve-3d;
+  backface-visibility: hidden;
 }
 
 .flipper-front {
